# GestureGlove

./: CMakeLists.txt  README.md  ei_classifier_porting.cpp  main.c  main.cpp
Bluetooth_Reciever/: config.json  gGloveReciever.py
model-parameters/: anomaly_clusters.h  anomaly_types.h  dsp_blocks.h  model_metadata.h  model_variables.h
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
